tests/ui/rustdoc/check-doc-alias-attr-location.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/check-doc-alias-attr-location.rs:22:12
   |
LL |     fn foo(#[doc(alias = "qux")] _x: u32) -> Self::X {
   |            ^^^^^^^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on foreign module
  --> $DIR/check-doc-alias-attr-location.rs:9:15
   |
LL | #[doc(alias = "foo")]
   |               ^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:12:15
   |
LL | #[doc(alias = "bar")]
   |               ^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:18:15
   |
LL | #[doc(alias = "foobar")]
   |               ^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on type alias in implementation block
  --> $DIR/check-doc-alias-attr-location.rs:20:19
   |
LL |     #[doc(alias = "assoc")]
   |                   ^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on statement
  --> $DIR/check-doc-alias-attr-location.rs:26:23
   |
LL |         #[doc(alias = "stmt")]
   |                       ^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on expression
  --> $DIR/check-doc-alias-attr-location.rs:31:23
   |
LL |         #[doc(alias = "expr")]
   |                       ^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on match arm
  --> $DIR/check-doc-alias-attr-location.rs:36:27
   |
LL |             #[doc(alias = "arm")]
   |                           ^^^^^

warning: `#[doc]` attribute cannot be used on function params
  --> $DIR/check-doc-alias-attr-location.rs:22:12
   |
LL |     fn foo(#[doc(alias = "qux")] _x: u32) -> Self::X {
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = help: `#[doc]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, extern crates, foreign modules, foreign statics, functions, impl blocks, macro defs, modules, statics, struct fields, trait aliases, traits, type aliases, unions, and use statements
   = note: requested on the command line with `-W unused-attributes`

warning: `#[doc]` attribute cannot be used on statements
  --> $DIR/check-doc-alias-attr-location.rs:26:9
   |
LL |         #[doc(alias = "stmt")]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = help: `#[doc]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, extern crates, foreign modules, foreign statics, functions, impl blocks, macro defs, modules, statics, struct fields, trait aliases, traits, type aliases, unions, and use statements

warning: `#[doc]` attribute cannot be used on expressions
  --> $DIR/check-doc-alias-attr-location.rs:31:9
   |
LL |         #[doc(alias = "expr")]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = help: `#[doc]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, extern crates, foreign modules, foreign statics, functions, impl blocks, macro defs, modules, statics, struct fields, trait aliases, traits, type aliases, unions, and use statements

warning: `#[doc]` attribute cannot be used on match arms
  --> $DIR/check-doc-alias-attr-location.rs:36:13
   |
LL |             #[doc(alias = "arm")]
   |             ^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = help: `#[doc]` can be applied to associated consts, associated types, constants, crates, data types, enum variants, extern crates, foreign modules, foreign statics, functions, impl blocks, macro defs, modules, statics, struct fields, trait aliases, traits, type aliases, unions, and use statements

error: aborting due to 8 previous errors; 4 warnings emitted

